# Shader_window

./: Cargo.toml  README.md  index_jpeg_img.html
shaders/ascii/: fragment_shader.glsl  fragment_shader_with_edge.glsl  glyph_textures.txt
shaders/edge_detect/: fragment_shader.glsl
shaders/none/: fragment_shader.glsl
shaders/pixel/: fragment_shader.glsl  vertex_shader.glsl
shaders/test/: fragment_shader.glsl
src/: help_functions.rs  main.rs  select_mode.rs  select_shader.rs  web_socket.rs
src/capture/: linux.rs  macos.rs  mod.rs  screen_capture.rs  windows.rs
src/graphics/: mod.rs  shader_reader.rs  texture.rs  window.rs
