[package]
name = "shader_window"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.61.0"
image = "0.25.9"
scrap = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
